--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
     "@forestadmin/agent": "^1.0.0",
     "@forestadmin/datasource-sql": "^1.0.0",
+    "dotenv": "^16.0.1",
+    "express": "^5.1.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
-    "typescript": "^4.9.4",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
